--- a/index.html
+++ b/index.html
@@ -10,8 +10,52 @@
 </head>
 
 <body>
+    <header>
+        <div class="row-header">
+            <ul class="left-ul">
+                <li><a href="http://"><img id="logo-top" src="img/logo-small.png" alt="logosmall"></a></li>
+                <li><a href="http://">Perchè Dropbox</a></li>
+                <li><a href="http://">Funzioni</a></li>
+                <li><a href="http://">Piani e Prezzi</a></li>
+            </ul>
 
+            <ul class="right-ul">
+                <li><a href="http://">Supporto</a></li>
+                <li><a href="http://">Contatta l'ufficio vendite</a></li>
+                <li><a href="http://">Accedi</a></li>
+                <li><a href="http://"><span id="start">Inizia</span></a></li>
+            </ul>
+
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <div class="row-hero">
+                <div class="col-left-hero">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <button> Inizia la tua prova gratuita</button>
+                    <p>Annulla in qualsiasi momento</p>
+                    <div><i class="fa-solid fa-arrow-down"></i></div>
+
+                </div>
+                <div class="col-right-hero">
+                    <img src="img/jumbo.png" alt="jumbo">
+
+                </div>
+            </div>
+
+
+        </section>
+
+    </main>
     
+    <footer>
+
+    </footer>
+
+
     
 </body>
 </html>
