--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
 
                 </div>
             </div>
-
-
         </section>
+
+        <div class="body-main">
+            <h2>Trova il piano business che fa per te</h2>
+            <div class="radio">
+                <input type="radio" name="piano" id="mensile">
+                <label id="spacing" for="mensile">Fatturazione mensile</label>
+                <input type="radio" name="piano" id="annuale">
+                <label for="annuale">Fatturazione annuale</label>
+            </div>
+
+        </div>
 
     </main>
     
