--- a/index.html
+++ b/index.html
@@ -55,6 +55,36 @@
                 <input type="radio" name="piano" id="annuale">
                 <label for="annuale">Fatturazione annuale</label>
             </div>
+            <div class="row-body-main">
+                <div class="card">
+                    <h5>Singolo</h5>
+                    <hr>
+                    <h3>Professional</h3>
+                    <h4>€ 12.00</h4>
+                    <h4>/mese</h4>
+                    <ul>
+                        <li>1 utente</li>
+                        <li>5 TB di spazio di archiviazione sicuro</li>
+                        <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                    </ul>
+                    <button type="submit">Prova gratis per 30 giorni</button>
+                    <p>oppure <a href="http://">acquista ora</a></p>
+                    <hr>
+                    <h4>Punti salienti del piano</h4>
+                    <ul>
+                        <li>Invia file fino a 100 GB con Dropbox Transfert</li>
+                        <li>Cartelle offline su dispositivi mobili</li>
+                    </ul>
+
+                </div>
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+
+            </div>
 
         </div>
 
