schemza sezione partner

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <div class="body-main">
+        <section class="body-main">
             <h2>Trova il piano business che fa per te</h2>
             <div class="radio">
                 <input type="radio" name="piano" id="mensile">
@@ -58,6 +58,7 @@
                 <input type="radio" name="piano" id="annuale">
                 <label for="annuale">Fatturazione annuale</label>
             </div>
+            <!-- sezione card -->
             <div class="row-body-main">
                 <!-- card -->
                 <div class="card">
@@ -166,8 +167,23 @@
                 </div>
 
             </div>
+            <!-- sezione Partner -->
+            <div class="sezione-partner">
+                <div class="col-left">
+                    <img src="img/partner.png" alt="partner">
+                </div>
+                <div class="col-right">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova un partner dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <a href="http://">Trova Partner</a>
 
-        </div>
+                </div>
+                
+
+            </div>
+
+
+        </section>
 
     </main>
 
