inizio sezione business

--- a/index.html
+++ b/index.html
@@ -169,17 +169,21 @@
             </div>
             <!-- sezione Partner -->
             <div class="sezione-partner">
-                <div class="col-left">
+                <div class="col-left-partner">
                     <img src="img/partner.png" alt="partner">
                 </div>
-                <div class="col-right">
+                <div class="col-right-partner">
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p>Trova un partner dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                    <a href="http://">Trova Partner</a>
+                    <a class="button-partner" href="http://">Trova un Partner</a>
 
                 </div>
                 
 
+            </div>
+            <!-- sezione Dropbox Business -->
+            <div class="sezione-business">
+                
             </div>
 
 
