--- a/index.html
+++ b/index.html
@@ -183,7 +183,46 @@
             </div>
             <!-- sezione Dropbox Business -->
             <div class="sezione-business">
-                
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="card-row-business">
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-switching-tools.png" alt="tools">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-send-files-it.png" alt="sendfiles">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-coordinate-it.png" alt="coordinate">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-integrations-it.png" alt="integrations">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-multi-device.png" alt="multidevice">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+                    <div class="card-business">
+                        <img class="img-business" src="img/business-feature-security.png" alt="security">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porto a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+
+                    </div>
+
+                </div>
             </div>
 
 
