--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
                         Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
                         per ottimizzare il flusso di lavoro esistente.</p>
-                    <button> Inizia la tua prova gratuita</button>
+                    <button class="button"> Inizia la tua prova gratuita</button>
                     <p>Annulla in qualsiasi momento</p>
                     <div><i class="fa-solid fa-arrow-down"></i></div>
 
