lavorazione loghi clienti

--- a/index.html
+++ b/index.html
@@ -225,6 +225,42 @@
                 </div>
             </div>
 
+        </section>
+        <!-- sezione clienti -->
+        <section class="body-bottom">
+            <div class="sezione-business">
+
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="http://">Scopri di più sui nostri clienti</a>
+                <div class="row-clienti">
+                    <div class="loghi-clienti-left">
+                        <div class="img-container"><img src="img/designit.svg" alt="designit"></div>
+                        <div class="img-container"><img src="img/arizona_state_university.svg" alt="arizona"></div>
+                        <div class="img-container"><img src="img/university_of_florida.svg" alt="florida"></div>
+                        <div class="img-container"><img src="img/topps.svg" alt="topps"></div>
+
+                    </div>
+                    <div class="dettaglio-clienti">
+                        <img src="img/designit.svg" alt="designitdet">
+                        <hr>
+                        <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e
+                            uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,
+                            ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte
+                            soluzioni sono compatibili con queste esigenze, ma nessuna è facile
+                            quanto Dropbox Paper".</p>
+                        <p>Morten Thomsen, Global IT Lead</p>
+
+                    </div>
+                    <div class="loghi-clienti-right">
+                        <div class="img-container"><img src="img/world_bicycle_relief.svg" alt="bicycle"></div>
+                        <div class="img-container"><img src="img/hearst_corp.svg" alt="hearst"></div>
+                        <div class="img-container"><img src="img/lonely_planet.svg" alt="lonelypl"></div>
+                        <div class="img-container"><img src="img/clear_channel.svg" alt="clearch"></div>
+                    
+                    </div>
+
+                </div>
+            </div>
 
         </section>
 
