--- a/index.html
+++ b/index.html
@@ -295,6 +295,71 @@
     </main>
 
     <footer>
+        <div class="footer-container">
+            <div class="col-footer">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                
+            </div>
+
+            <div class="col-footer">
+                <h4>Prodotti</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="col-footer">
+                <h4>Azienda</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+
+            </div>
+
+            <div class="col-footer">
+                <h4>Supporto</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+
+            </div>
+
+            <div class="col-footer">
+                <h4>Community</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+
+            </div>
+            
+        </div>
+        <div class="footer-pedice">
+            <hr>
+            <button><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i></button>
+        </div>
 
     </footer>
 
